# ChangeLog for dev-embedded/ponyprog
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-embedded/ponyprog/ChangeLog,v 1.27 2010/10/08 03:53:27 vapier Exp $

*ponyprog-2.07c (08 Oct 2010)

  08 Oct 2010; Mike Frysinger <vapier@gentoo.org> +ponyprog-2.07c.ebuild,
  +files/ponyprog-2.07c-build.patch:
  Version bump.

  08 Oct 2010; Mike Frysinger <vapier@gentoo.org>
  files/ponyprog-2.07a-build.patch:
  Fix typo in makefile that breaks with make-3.82 #339002 by Diego E.
  Pettenò.

*ponyprog-2.07a-r2 (20 Jun 2010)

  20 Jun 2010; Samuli Suominen <ssuominen@gentoo.org>
  +ponyprog-2.07a-r2.ebuild:
  Use xdg-open instead of hardcoding netscape, firefox or epiphany for
  $BROWSER.

  17 Jun 2010; Samuli Suominen <ssuominen@gentoo.org>
  ponyprog-2.07a-r1.ebuild, +files/ponyprog-2.07a-build.patch:
  Respect CC, CXX and LDFLAGS wrt #317767 by Kacper Kowalik. Drop
  unnecessary || die from pkg_setup wrt #317769.

  29 Apr 2010; Samuli Suominen <ssuominen@gentoo.org>
  ponyprog-2.07a-r1.ebuild:
  amd64 stable wrt #300418

  09 Apr 2010; Denis Dupeyron <calchan@gentoo.org> ponyprog-2.07a-r1.ebuild:
  Removed some last seamonkey remains, thanks to Lars Wendler.

  29 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  ponyprog-2.07a-r1.ebuild:
  x86 stable wrt bug #300418

*ponyprog-2.07a-r1 (21 Mar 2010)

  21 Mar 2010; <calchan@gentoo.org> +ponyprog-2.07a-r1.ebuild:
  Removed seamonkey dependency (bug #300418). Added graphicsmagick as
  possible replacement to imagemagick.

  01 Jan 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  ponyprog-2.07a.ebuild:
  mozilla-firefox-bin -> firefox-bin

  24 Nov 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  ponyprog-2.07a.ebuild:
  Force serial make per bug #282244.

  28 Jun 2009; Markus Meier <maekke@gentoo.org> ponyprog-2.07a.ebuild:
  amd64/x86 stable, bug #274785

  20 Jun 2009; Mike Frysinger <vapier@gentoo.org> ponyprog-2.07a.ebuild,
  files/ponyprog-2.07a-gcc43.patch: