@@ -1,10 +1,23 @@
-AUX ponyprog-2.07a-build.patch 1171 SHA256 c094d3591cfb57f866e50eea5375852a60f659a8318bf2b12f3495f21f46740a SHA512 c8da135fa3ea1a2019501c5d8b67747a5de724078b8f80fb9492560961bbbeee53bcc051c0f32e6cac2ea5d90e6cfc0f46e274fe4eb2d00cdf4177d1965041b9 WHIRLPOOL fd871e1ac828e1f11279dd9a4cd9f0247a9bc5ba75b5883ab0ba4014685a6861c639404c1cb6c788aba94b363de6a003171ab70a84800e6d273c2a5c76db7da1
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+AUX ponyprog-2.07a-build.patch 1166 SHA256 b609219f3186828bfa2f6a50ce5d79328ec769fe59be17d31055847b9fae8883 SHA512 84fb2241889dd15af8164ac03311b9de8f305b36ef5e424b0e741c82cb2fe8a5aad3ba7c581df334522f053c7d81ea87bb6433bed88698149a38d9d9fe8e0df2 WHIRLPOOL 31a9ff5278671290473b9e5ee146bd367d69b2d2148c09bb0f25fbc02f3109c82eadcd10ddb7c8f73217362cf804d3bea23898621a097869a7d16b63023808d3
 AUX ponyprog-2.07a-gcc43.patch 1428 SHA256 01e2bfbada45eff447dd1d8fcbcf2605cd30570da08df372a5af99db7659bea4 SHA512 8b14e521a333b22e52d55002b8c951a244d6c7703a05a98b02eebd11960937dd23c7a2084d067338c7b5def568d087ade8c49dffa52e1eaf1e692af910e875b3 WHIRLPOOL cb01f39294f9aeefda6142717c9e5e81cab9741ae6ac23cff3643368cf9718f794dca371ec22bfdfc327e909290415d65c55b2699eb7c0137edd6bc269a29132
-AUX ponyprog-2.07c-build.patch 1076 SHA256 d386507c4c16924fe3a0c2ce379f7711a395ad36f76e79e7d5c59a6e54ffbf81 SHA512 4581745b35c340840087c036c485ae682174e5a2a743becf864b3253ad5a642f62e43cd943fcbf4756340fcc4a06c242d1866fd3216ad680b4531ccd19722749 WHIRLPOOL 430da3c22b566b89df5092fa3debe2284ae8ec5243b28b0c90c47c4e65e7bb0b12f460fff0c9640dc4916ca197d14cc52c9f71aadc58c50d02f8a7d36686fd51
+AUX ponyprog-2.07c-build.patch 1167 SHA256 30ef526cb473a3f65e0af7c0fd6349d64ad173bab89e6a7a00e5970fed11f591 SHA512 0c8280a8f040ec4c11ac37aea43f935a3a3aa4d27ea4fc26b8ad25a5abc19f40a00e463703420f59f9cabea0e0326e15afc0e3b6c52675e9e49549cc0bce0d15 WHIRLPOOL 69bbb6ebd588ad1719e142aa366b713d8c7bd5559f9a5e984f247ae146f4be106c1ba619f7a6525b0e5aee176c974d3187ce0867a65c00ae75247e1ccfbc3c41
 DIST PonyProg2000-2.07a.tar.gz 680770 SHA256 6398fcbe15a0ea93f6f38a3ad7299f5b46ba09d2f97050f386e27f19a3283436 SHA512 f096d48256abf20ad16de9ab1822d343d4e034c94f1de0c5316bbb2c19fd3e751f01212ee97ab0f571a0b2423691d8e1d88caaea5adf91e3eafb5136868b4ab6 WHIRLPOOL 064f3c2d296fc977d736c88f9c5539a58dfb6356c42b9b9a43eae2105d6c3c48aac91755fd3186a0a2f558585c0ad3216494ad98e5fba8f5c3bc47733bdf3da3
 DIST Pony_Prog2000-2.07c.tar.gz 653300 SHA256 c9387e479a953a1b9aabbdaca31c90e65c8557db62bac21bd959cff346fa825e SHA512 33cd14fa8283ce8af8265a48df7d960c7c2779551d0f204f6728a9e1e54204f52ea608c4e6090dc56f7634a02abd9bb960230f75a3a9716b1639708a57c31809 WHIRLPOOL 64650b85c31f6982fed0aa5519f42e0b2d451184ecbfa0f4f9cb45996ad37675b05ed4f7d405d1462a291b6601dff926b0a51e8accc17f54bfdf92665882aa78
 EBUILD ponyprog-2.07a-r1.ebuild 1813 SHA256 b76c9318d67c04ea0c153a8b44e192ddbc3aeb28cdce140aa08590ebf10e36d8 SHA512 fa9eefc4dee44fc442a2f1fba76e4b05c4a2714df944181b1536ab920011b6c343906375ba04acf602e02e2a1897c8f09bfda8713ce7e3d506c3dd0211e635ca WHIRLPOOL 3c0198586d4be1cb1297b85a8ef01d03699c71dcaa183103478813bb0c45a76f30b1e9b4324c4305a6d378bf348b65d659860d52329532b2f6f5b893557ddcf5
 EBUILD ponyprog-2.07a-r2.ebuild 1706 SHA256 b1198fcb914ef921379d231b2e46982243da4795161fca8863c5e1204503143e SHA512 27a37fd88f9e6ef0a240a95937a74e1b9c0d714db5c6c22817e13ee7a21e6e4ed74f40e487e186f3c986d4f9a6781cd134f3e82099e18b7df1a1381d3585cc2a WHIRLPOOL 366d0b803b2fae9a2531529fe9b0340b4fd2dab932135af61374e13bf36f9f8d1e2257f9db67fe77b168fafd1d97f0231736e49c4b78eea4f74e716fec574271
+EBUILD ponyprog-2.07c-r1.ebuild 1689 SHA256 1876c0cfc5996c6c7c298d527d1e262df6e1d3247218a78700d9057e1e07dd6f SHA512 a9cb15ad5110fe459bdf1ffee427d3cc32a29060398ba2b43dbbd5141f2e90c9f12cde4ac311e9538ccd4b55dcea395f2ed3fcf851ea8cbd5a08070f8d081aaa WHIRLPOOL 517ca0e020f88d9b26efe773bd39d1dafb035379c487d4110150d1d956bfd18b4ca3d550c58a440eb04a051860bf461584750c7143dc3f99be11b8cbd8df0040
 EBUILD ponyprog-2.07c.ebuild 1714 SHA256 24e692e02571048e88bccd66a06ca7d758672bdd31a70e8e5fd2cbc62fe89db1 SHA512 dd04118ef9776840f33e54975f4fd71ce348e3d90fa37ff9364767250f4cb3cfdf55a8b936cc8a2690e01c592ce13e1411a74a01028ddbbd6ef03bf7c3b6522d WHIRLPOOL 74573cee998dab8e36451f29bdf700216dde20b6aa5108a85485dd897669e005c0b2b07e5839df5e702d721cf9a758db5a384108b5c8566d33350874eedbfa7e
-MISC ChangeLog 3788 SHA256 42af5b4103a5ba2211712d33b9e35b066b095adfb2930ce7536e3f78a54a701e SHA512 c76e4d65bb78de74000b7bc50b4699c35f5ff55383c4eae106ea955cf1b055e2c1e58c56e11dd7163d9f3bfc1ea608dab10c1ef869039adbb7c39b95aec7a2b1 WHIRLPOOL 6d0b4f6d93c5c35782f7ba91906af5ea79bfda273499cb5d84555eb31636a18c479ec76f1b6c4e4c624ffd700fd537d9bed3b754c46682405e82eb3d96a12256
+MISC ChangeLog 4041 SHA256 4681cde66b6be0a9cad13ae456c558ea7e1e26a546c7ccd45910a3e733730505 SHA512 4638406e5ed3292c892903c22a4fe5af3e924e927df67bf3d73f6643b6c6af20ff47e764d0088e5a49c0571125a2dada560aa5327e48e0e07e60880b078b04ca WHIRLPOOL b47804223ec2b95d0f296cb26f372f05e8ce2f5547edfa11e3cd74391fbc4a265c5cc3b71dcc51f8764ef4f0b0997389f91a91d5b00beffbfda60f08d2fbc792
 MISC metadata.xml 382 SHA256 aaedb0b1e1bb1093f7e221f35e25af1d263cbfb16d8cf108568902119ba9e22c SHA512 5882cb1312fb890d0dacf7149fd3b446ae2e05b195f5d1fc403cf5e565c74a963133a4f1572aae49b99b590b219a8cdeb420b9dda5323603423048a83312c2a5 WHIRLPOOL b5b8f17101e5979943e46a9b6818b6fe44cc7e81d6ce412471ded2bd6177fc1560e5028fa3d102a6fa8bf38486870fca4e4bb7008e9be7576e84f6fde8516f97
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iJwEAQEIAAYFAlN7SXIACgkQG9wOWsQutdZ9SQQAkxRpAxfuhsz2YzaJ+zk02zKD
+KjqEqsyas6zyfvyT9p+rgoWFH99s5mVC3mt3XhCIk28NQeeSnX/tiJVoPQoqmlRF
++Us91SybkOLLBSIJwq1Y8Y2p167FNJtClo8pUvyYMRbcGgwCUT6p2pUsxQi41nBn
+S6ZuCv6R7nZkcSXOWtc=
+=k3Ef
+-----END PGP SIGNATURE-----
