@@ -1,6 +1,13 @@
 # ChangeLog for dev-embedded/ponyprog
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/ponyprog/ChangeLog,v 1.27 2010/10/08 03:53:27 vapier Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/ponyprog/ChangeLog,v 1.28 2014/05/20 12:10:10 zlogene Exp $
+
+*ponyprog-2.07c-r1 (20 May 2014)
+
+  20 May 2014; Mikle Kolyada <zlogene@gentoo.org> +ponyprog-2.07c-r1.ebuild,
+  files/ponyprog-2.07a-build.patch:
+  Revision bump: EAPI=5; epatch_user; fix parallel make issue wrt bug #282244.
+  Thanks to Sergey Popov.
 
 *ponyprog-2.07c (08 Oct 2010)
 
@@ -101,4 +108,3 @@
 
   16 Mar 2004; Daniel Black <dragonheart@gentoo.org> ponyprog-2.06c.ebuild:
   Initial ebuild by Marco Testarmata <testarmata.marco@tiscali.it> in bug #43289
-
